--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,10 @@
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_USER=parking_user
+DB_PASSWORD=parking123
 DB_NAME=parking_system
 DB_HOST=localhost
 DB_PORT=5432
 PORT=5000
 NODE_ENV=development
-JWT_SECRET=parking_system_secret_key_very_secure
+JWT_SECRET=parking-system-secret-key-2024
 JWT_EXPIRES_IN=24h
+CORS_ORIGIN=http://localhost:3000
