--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,20 @@
     "format": "prettier --write 'src/**/*.js'",
     "seed": "node src/utils/seed.js"
   },
-  "keywords": ["parking", "management", "vehicle", "restful"],
+  "keywords": [
+    "parking",
+    "management",
+    "vehicle",
+    "restful"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "helmet": "^7.2.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -32,6 +37,6 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.1"
   }
-} 
+}
