--- a/vehicle-parking-frontend/package.json
+++ b/vehicle-parking-frontend/package.json
@@ -28,6 +28,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
